--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
 
         <spring.framework.version>4.3.3.RELEASE</spring.framework.version>
 
+        <!--export dependencies-->
+        <poi.version>3.15</poi.version>
+        <jackson.csv.version>2.8.4</jackson.csv.version>
     </properties>
 
     <repositories>
@@ -102,6 +105,18 @@
             <artifactId>spring-test</artifactId>
             <version>${spring.framework.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>${jackson.csv.version}</version>
         </dependency>
 
     </dependencies>
